--- a/index.html
+++ b/index.html
@@ -7,30 +7,41 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="calculator">
-        <input type="text" id="display" disabled>
-        <div class="buttons">
-            <button class="btn span-two" onclick="buttonClicked(this); clearAll()">AC</button>
-            <button class="btn" onclick="buttonClicked(this); deleteLastChar()">C</button>
-            <button class="btn" onclick="buttonClicked(this); appendToDisplay('/')">/</button>
-            <button class="btn" onclick="buttonClicked(this); appendToDisplay('7')">7</button>
-            <button class="btn" onclick="buttonClicked(this); appendToDisplay('8')">8</button>
-            <button class="btn" onclick="buttonClicked(this); appendToDisplay('9')">9</button>
-            <button class="btn" onclick="buttonClicked(this); appendToDisplay('*')">*</button>
-            <button class="btn" onclick="buttonClicked(this); appendToDisplay('4')">4</button>
-            <button class="btn" onclick="buttonClicked(this); appendToDisplay('5')">5</button>
-            <button class="btn" onclick="buttonClicked(this); appendToDisplay('6')">6</button>
-            <button class="btn" onclick="buttonClicked(this); appendToDisplay('+')">+</button>
-            <button class="btn" onclick="buttonClicked(this); appendToDisplay('1')">1</button>
-            <button class="btn" onclick="buttonClicked(this); appendToDisplay('2')">2</button>
-            <button class="btn" onclick="buttonClicked(this); appendToDisplay('3')">3</button>
-            <button class="btn" onclick="buttonClicked(this); appendToDisplay('-')">-</button>
-            <button class="btn" onclick="buttonClicked(this); toggleSign()">+-</button>
-            <button class="btn" onclick="buttonClicked(this); appendToDisplay('0')">0</button>
-            <button class="btn" onclick="buttonClicked(this); appendToDisplay('.')">.</button>
-            <button class="btn" onclick="buttonClicked(this); calculate()">=</button>
+    <div class="container">
+        <div class="calculator">
+            <input type="text" id="display" disabled>
+            <div class="buttons">
+                <button class="btn span-two" onclick="buttonClicked(this); clearAll()">AC</button>
+                <button class="btn" onclick="buttonClicked(this); deleteLastChar()">C</button>
+                <button class="btn" onclick="buttonClicked(this); appendToDisplay('/')">/</button>
+                <button class="btn" onclick="buttonClicked(this); appendToDisplay('7')">7</button>
+                <button class="btn" onclick="buttonClicked(this); appendToDisplay('8')">8</button>
+                <button class="btn" onclick="buttonClicked(this); appendToDisplay('9')">9</button>
+                <button class="btn" onclick="buttonClicked(this); appendToDisplay('*')">*</button>
+                <button class="btn" onclick="buttonClicked(this); appendToDisplay('4')">4</button>
+                <button class="btn" onclick="buttonClicked(this); appendToDisplay('5')">5</button>
+                <button class="btn" onclick="buttonClicked(this); appendToDisplay('6')">6</button>
+                <button class="btn" onclick="buttonClicked(this); appendToDisplay('+')">+</button>
+                <button class="btn" onclick="buttonClicked(this); appendToDisplay('1')">1</button>
+                <button class="btn" onclick="buttonClicked(this); appendToDisplay('2')">2</button>
+                <button class="btn" onclick="buttonClicked(this); appendToDisplay('3')">3</button>
+                <button class="btn" onclick="buttonClicked(this); appendToDisplay('-')">-</button>
+                <button class="btn" onclick="buttonClicked(this); toggleSign()">+-</button>
+                <button class="btn" onclick="buttonClicked(this); appendToDisplay('0')">0</button>
+                <button class="btn" onclick="buttonClicked(this); appendToDisplay('.')">.</button>
+                <button class="btn" onclick="buttonClicked(this); calculate()">=</button>
+            </div>
         </div>
+
+         <!-- Display the last three calculations -->
+        <div class="last-calculations">
+            <h2>Last Three Calculations</h2>
+            <ul id="lastCalculations"></ul>
     </div>
+    </div>
+
+   
+
     <script src="scripts.js"></script>
 </body>
 </html>
